# discovardenovo

./: INSTALL  LICENSE  Makefile.in  README  aclocal.m4  configure  configure.ac
docs/: CrossOut  DDN_input_spec  DiscovarDeNovo  NhoodInfo
m4/: ax_lib_jemalloc.m4  ax_lib_z.m4  broad.m4
src/: Kclock.cc  Kclock.h  Makefile.in  MapReduceEngine.h  PackAlign.h  PrintAlignment.h  ReadError.h  STLExtensions.h  SeqInterval.h  Superb.cc  Vec.cc  Vec.h  VecUtilities.h
src/bam/: ReadBAM.cc
src/fastg/: FastgTools.cc  FastgTools.h
src/feudal/: FeudalFileWriter.cc  FilesOutputIterator.h
src/graph/: Digraph.cc  Digraph.h  DigraphTemplate.h  FindCells.h  GraphAlgorithms.h
src/kmers/: GetNextKmerPair.h  ReadPather.h
src/layout/: MainArrays.h  common.h
src/lookup/: LookAlign.h  LookupTable.cc  LookupTable.h  LookupTableBuilder.cc  MakeLookupTable.cc  QueryLookupTableCore.cc
src/math/: Functions.cc  Functions.h  HoInterval.cc  HoInterval.h
src/pairwise_aligners/: AffineAlign.cc  AlignFromMutmersAndSW.cc  GenAlignments.cc  GenAlignments.h  MakeAligns.cc  MakeAligns.h  MutmerGraph.h  PerfectAlignment.cc  ProcessFrequentKmers.cc  SmithWatAffine.cc  SmithWatBanded.cc  SmithWatScore.cc  SmithWatScore.h  SmithWaterman.cc
src/paths/: AssemblyCleanupTools.cc  BigMapTools.cc  BigMapTools.h  HyperBasevector.cc  HyperBasevector.h  HyperEfasta.cc  HyperKmerPathCleaner.cc  KmerPath.cc  KmerPathDatabase.cc  LongReadPatchOptimizer.cc  Mux.h  MuxGraph.cc  MuxWalkGraph.cc  MuxWalkGraph.h  OffsetTracker.cc  OffsetTracker.h  OrientedKmerPathId.h  PairedPair.cc  PairedPair.h  Ulink.cc  (+7 more)
(+60 files in other folders)
